apps/traefik/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  labels:
    goldilocks.fairwinds.com/enabled: "true"
